# Mesh-Simplification

./: .gitignore  CMakeLists.txt  Decimation.cxx  README.md  compile_centos.sh  compile_ubuntu.sh  vtkSMFReader.cxx  vtkSMFWriter.cxx
install/: compile_centos.sh  compile_ubuntu.sh
src/: vtkSMFReader.h  vtkSMFWriter.h
